--- a/cv/cv.html
+++ b/cv/cv.html
@@ -13,7 +13,7 @@
     <img src="assets/img/cv.jpg" width="200px" height="200px" alt="imagen de cv">
     <h3></h3>
     <p><b>Resumen</b></p>
-    <p style="width:600px">Hola soy juan joven apacionado por la tecnologia y los videojuegos,
+    <p style="width:600px">Hola soy Juan joven apasionado por la tecnología y los videojuegos,
         me encanta pasar el con mi familia y amigos. en lo que cuenta con mi experiencia profesional, hasta la fecha,
         demuestra mi capacidad
         para trabajar tanto solo como en equipo, tomar decisiones y aceptar responsabilidades. Me considero una persona
@@ -25,9 +25,9 @@
         <li><b>Lugar de Nacimiento:</b> Hualañé</li>
         <li><b>Fecha de nacimiento:</b> 25/04/1994</li>
     </ul>
-    <p><b>Fromación Academica</b></p>
+    <p><b>Formación Académica</b></p>
     <p style="width:600px">Ingeniero en Informática con más de un año de experiencia
-        enfocado al desarrollo web. Poseo conocimientos en distintas
+        enfocado al Desarrollo Web. Poseo conocimientos en distintas
         tecnologías, tales como Html5, Css3, JavaScript, Angular, Vuejs,
         Nodejs. Además, he participado en bootcamps como ayudante y
         relator, trabajando con la metodología ágil Scrum. He tenido un
@@ -39,14 +39,14 @@
     <p><b>Certificados y Cursos</b></p>
     <ul>
         <li>Curso fundamentos del desarrollo web - Udemy</li>
-        <li>Curso Scrum Master - linkedin learning</li>
-        <li>Curso Nodejs - linkedin learning</li>
-        <li>Curso de Angular -linkedin learning</li>
+        <li>Curso Scrum Master - Linkedin learning</li>
+        <li>Curso Nodejs - Linkedin learning</li>
+        <li>Curso de Angular - Linkedin learning</li>
         <li>Curso JavaScript - CoderHouse</li>
         <li>Curso Fundamento de servidores y redes informáticas - Cisco Netacad</li>
         <li>Curso sistemas operativos - Microfost MTA</li>
     </ul>
-    <p>Más información: <a href="portafolio.html">Protafolio</a></p>
+    <p>Más información: <a href="portafolio.html">Portafolio</a></p>
 </body>
 
 </html>
